force-app/main/default/objects/Application__c/fields/Fraud_Flag__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Flag__c</fullName>
    <label>Fraud Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>