force-app/main/default/objects/Application__c/fields/ID_Verification__c.field-meta.xml
<CustomField>
    <fullName>ID_Verification__c</fullName>
    <formula>IF( OR( Primary_Income_Source__c=&apos;4&apos;,Primary_Income_Source__c=&apos;99&apos;),&apos;T&apos;,&apos;F&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Verification</label>
    <type>Text</type>
</CustomField>