force-app/main/default/objects/Application__c/fields/Primary_Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Income_Source__c</fullName>
    <formula>&apos;7&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Income Source</label>
    <type>Text</type>
</CustomField>