force-app/main/default/objects/Application__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Submission</fullName>
            </value>
            <value>
                <fullName>Documentation Verification</fullName>
            </value>
            <value>
                <fullName>Credit Evaluation</fullName>
            </value>
            <value>
                <fullName>Loan Underwriting</fullName>
            </value>
            <value>
                <fullName>Loan Approval and Disbursement</fullName>
            </value>
            <value>
                <fullName>Loan Servicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>