force-app/main/default/objects/Application__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mismatch Information</fullName>
            </value>
            <value>
                <fullName>Unable to verify</fullName>
            </value>
            <value>
                <fullName>Duplicate Application</fullName>
            </value>
            <value>
                <fullName>Authorized by Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>